--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,8 @@ theme: null
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
-# exclude:
+exclude:
+  - README.md
 #   - Gemfile
 #   - Gemfile.lock
 #   - node_modules
