Minimise HTML and CSS when building; Replace text+icon social links with icon only

--- a/_config.yml
+++ b/_config.yml
@@ -47,6 +47,21 @@ kramdown:
     block:
       line_numbers: true
 
+compress_html:
+  clippings: all
+  comments: all
+  endings: all
+  ignore:
+    envs: []
+  blanklines: false
+  profile: false
+  startings: [html, head, body]
+
+
+sass:
+  style: compressed
+
+
 plugins:
   # - jekyll-feed # TODO When I start adding blog pages
   - jekyll-sitemap
