--- a/_config.yml
+++ b/_config.yml
@@ -75,6 +75,9 @@ theme: null
 # to override the default setting.
 exclude:
   - README.md
+  - LICENSE
+  - LICENSE-APACHE-2.0
+  - LICENSE-CC-BY-SA-4.0
 #   - Gemfile
 #   - Gemfile.lock
 #   - node_modules
