--- a/_config.yml
+++ b/_config.yml
@@ -18,13 +18,13 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: static int lucas;
+title: Lucas Jansen
 # email: email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Hi. My name is Lucas and I am an electronic and software engineer from Cork, Ireland.
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://staticintlucas.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-author: staticintlucas
+author: Lucas Jansen
 twitter:
   username: staticintlucas
   card: summary
