Use minify to compress HTML/CSS/etc in GitHub actions

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,17 +8,29 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+
     steps:
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
         ruby-version: 2.7
+
+    - name: Set up minifier
+      run: sudo apt-get install minify
+
     - name: Checkout repo
       uses: actions/checkout@v2
+
     - name: Build site
       uses: limjh16/jekyll-action-ts@v2
       with:
         enable_cache: true
+
+    - name: Minify built files
+      run: |
+        minify -r ./_site/ -o ./_site/
+        minify --type=json -o ./_site/site.webmanifest ./_site/site.webmanifest
+
     - name: Publish site
       uses: peaceiris/actions-gh-pages@v3
       with:
