Update URL in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: >-
   Hi. My name is Lucas and I am an electronic and software engineer from Cork, Ireland.
 
 baseurl: "/"
-url: "https://staticintlucas.github.io"
+url: "https://lucasjansen.me"
 
 twitter_username: staticintlucas
 github_username:  staticintlucas
